--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
+    <link rel="stylesheet" href="assets/fonts/iconfont.css">
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
   <body>
     <app-root></app-root>
+    <script src="assets/fonts/iconfont.js"></script>
   </body>
 </html>
